[gd_scene load_steps=12 format=3 uid="uid://dp878x7y26us5"]

[ext_resource type="Script" uid="uid://dliacnnlc773f" path="res://Scripts/email.gd" id="1_fu882"]
[ext_resource type="Script" uid="uid://d0e0hthguxtv5" path="res://Scripts/emailspawner.gd" id="2_slim0"]
[ext_resource type="PackedScene" uid="uid://brwsaop82ohb2" path="res://Scenes/emails.tscn" id="3_jxd8c"]
[ext_resource type="Texture2D" uid="uid://b71jtqo6cptix" path="res://Image for Pc/Outher pc.png" id="4_7vyrb"]
[ext_resource type="Texture2D" uid="uid://x1vxyw1fubo4" path="res://Image for Pc/raw.png" id="5_g8bqi"]
[ext_resource type="Texture2D" uid="uid://onkqnrmdoqaf" path="res://Image for Pc/Pixelated Background.jpg" id="6_08x2g"]
[ext_resource type="Texture2D" uid="uid://clbbf8mna1jt1" path="res://Image for Pc/password.png" id="7_0n416"]
[ext_resource type="AudioStream" uid="uid://c6dkpsnbo8egm" path="res://sounds/6_Stinger_Victory_1_Master.mp3" id="8_0n416"]
[ext_resource type="AudioStream" uid="uid://cot11mwo1k4ib" path="res://sounds/boss.mp3" id="9_br1ai"]
[ext_resource type="AudioStream" uid="uid://bhkjg3mfjrlsi" path="res://sounds/7_Stinger_Defeat_1_Master.mp3" id="10_whtxt"]

[sub_resource type="FontFile" id="FontFile_jxd8c"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 556.0
offset_top = 321.0
offset_right = 556.0
offset_bottom = 321.0
script = ExtResource("1_fu882")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PasswordSpawner" type="Node2D" parent="CanvasLayer"]
position = Vector2(518, 329)
script = ExtResource("2_slim0")
password_scene = ExtResource("3_jxd8c")

[node name="CurrentPasswordLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.0590278
anchor_top = -0.0895062
anchor_right = 0.236979
offset_left = 434.0
offset_top = 337.0
offset_right = 474.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_jxd8c")
theme_override_font_sizes/font_size = 33
metadata/_edit_use_anchors_ = true

[node name="StrongButton" type="Button" parent="CanvasLayer"]
offset_left = 638.0
offset_top = 411.0
offset_right = 697.0
offset_bottom = 451.0
text = "Strong
"
metadata/_edit_use_anchors_ = true

[node name="WeakButton" type="Button" parent="CanvasLayer"]
offset_left = 426.0
offset_top = 411.0
offset_right = 477.0
offset_bottom = 451.0
text = "Weak"
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.0694444
anchor_right = 0.225694
offset_left = 445.0
offset_top = 161.0
offset_right = 485.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
offset_left = 411.0
offset_top = 279.0
offset_right = 698.0
offset_bottom = 352.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 53
text = "Game Over"
metadata/_edit_use_anchors_ = true

[node name="WinLabel" type="Label" parent="CanvasLayer"]
offset_left = 445.0
offset_top = 281.0
offset_right = 669.0
offset_bottom = 354.0
theme_override_colors/font_color = Color(1.51612e-06, 0.653202, 5.77569e-07, 1)
theme_override_font_sizes/font_size = 53
text = "You Win!"

[node name="RetryButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 444.0
offset_top = 320.0
offset_right = 526.0
offset_bottom = 371.0
text = "Retry"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ExitButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 569.0
offset_top = 319.0
offset_right = 666.0
offset_bottom = 371.0
text = "Exit
"

[node name="BACKGROUND" type="TextureRect" parent="CanvasLayer"]
offset_left = -744.0
offset_top = -601.0
offset_right = 1851.0
offset_bottom = 1383.0
mouse_filter = 2
texture = ExtResource("4_7vyrb")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
z_index = -3
offset_left = 1.0
offset_top = 10.0
offset_right = 2637.0
offset_bottom = 660.0
mouse_filter = 2
texture = ExtResource("5_g8bqi")
expand_mode = 1

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/TextureRect2"]
z_index = 2
layout_mode = 0
offset_left = 357.0
offset_top = 483.0
offset_right = 397.0
offset_bottom = 497.0
color = Color(0.0509804, 1, 0.372549, 1)

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
z_index = -2
offset_left = 350.0
offset_top = 117.0
offset_right = 771.0
offset_bottom = 513.0
mouse_filter = 2
texture = ExtResource("6_08x2g")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer"]
z_index = -1
offset_left = 340.0
offset_top = 123.0
offset_right = 772.0
offset_bottom = 484.0
mouse_filter = 2
texture = ExtResource("7_0n416")
expand_mode = 1

[node name="WinSound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("8_0n416")
bus = &"SFX"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 399.0
offset_top = 493.0
offset_right = 761.0
offset_bottom = 508.0
color = Color(0.145098, 0.380392, 1, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 362.0
offset_top = 488.0
offset_right = 402.0
offset_bottom = 511.0
text = "start"

[node name="CorrectSound" type="AudioStreamPlayer" parent="CanvasLayer"]
bus = &"SFX"

[node name="WrongSound" type="AudioStreamPlayer" parent="CanvasLayer"]
bus = &"SFX"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("9_br1ai")
bus = &"MUSIC"

[node name="WinTimer" type="Timer" parent="CanvasLayer"]
wait_time = 5.0
one_shot = true

[node name="defeatsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_whtxt")
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="CanvasLayer/WinTimer" to="." method="_on_win_timer_timeout"]
